trying to fix overflow

--- a/css/work.css
+++ b/css/work.css
@@ -48,7 +48,9 @@ p:hover{
 .work-container {
     margin: 20px;
     flex: 0 0 300px;
-    width: 100%;   
+    height: 300px;
+    width: 100%;  
+    overflow: hidden; 
 }
 .work-container {
     display: none;
@@ -57,8 +59,7 @@ p:hover{
 img {
     flex: 0 0 300px;
     width: 100%;
-    background-size: cover;
-    overflow: hidden;
+    height: auto;
 }
 footer {
     position: relative;
